# comfi-examples-hands

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
augmentation_model/LSTM/v0.3_lower/: model.onnx
augmentation_model/LSTM/v0.3_upper/: model.onnx
comfi_examples/: augmenter_utils.py  cam_utils.py  human_model_utils.py  ik_utils.py  linear_algebra_utils.py  triangulation_utils.py  urdf_utils.py  utils.py  viz_utils.py
model/mano-urdf/: show_urdf.py
model/mano-urdf/urdf/: mano.urdf  mano_left.urdf
model/urdf/: 1012_scaled.urdf  human.urdf  human_with_hands.urdf  human_with_mano.urdf  human_with_mano_short_torso.urdf  mano_meshes  mano_scaled.urdf
pkgs/: comfi-examples.nix  meshcat-shapes.nix  rtmlib.nix
scripts/: calibrate_human_model.py  download.py  get_jcp_from_mocap_markers.py  merge_urdfs.py  run_comparaison.py  run_ik.py  run_ik_acados_mcp_fullbody.py  run_ik_acados_mpc.py  run_ik_acados_mpc_cosmik.py  run_ik_acados_mpc_sam3d.py  run_ik_acados_mpc_sam3d_live.py  run_ik_acados_mpc_sharpa.py  run_ik_live.py  run_ik_live_rerun.py  run_marker_augmenter.py  run_procruste_alignement.py  run_triangulation.py  scale_sharpa_hand.py
scripts/human_pose_estimator/: run_pose_estimator.py
scripts/visualization/: viz_all_data.py  viz_jcp.py  viz_mks.py
utils/: utils.py
