[project]
name = "comfi-examples"
version = "0.1.0"
description = "human-robot Collaboration Oriented Markerless For Industry dataset utils"
readme = "README.md"
authors = [
]
maintainers = [
    { name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "example-robot-data>=4.3.0",
    "httpx>=0.28.1",
    "imageio>=2.37.0",
    "matplotlib>=3.10.7",
    "meshcat>=0.3.2",
    "meshcat-shapes>=1.0.0",
    "onnxruntime>=1.23.1",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pin>=3.7.0",
    "pyyaml>=6.0.3",
    "rtmlib>=0.0.13",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
